Various lint warning fixes and optimizations 2